--- a/ch5/extend/css/extend05.css
+++ b/ch5/extend/css/extend05.css
@@ -21,13 +21,34 @@ body {
     height: 170px;
 }
 
-/* sticky */
+.sticky{
+    position: -webkit-sticky-;
+    position: sticky;
+    top: 0;
+}
 
 
 /* relative */
+.relative
+{
+    position: relative;
+    top: 90px;
+    left: 30px;
 
+}
 
 /* fixed */
+.fixed{
+    position: fixed;
+    top: 500px;
+    right: 10px;
 
+}
 
 /* absolute */
+.absolute
+{
+    position: absolute;
+    bottom: 100;
+    right: 200;
+}
