--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,95 @@
 /*
-Author: 
-Date: 10-26-2023
-File Name: 
+Noah Robinson
+10-11-2023
+styles.css
 */
+body, header, nav, main, footer, h1, div, img, a,ul
+{
+	margin: 0;
+	padding: 0;
+	border: 0;
 
-/* CSS Reset */
-body, header, main, footer, h1, h3, section, article, div {
-    margin: 0;
-    padding: 0;
-    border: 0;
+}
+header{
+    font-family: 'Pacifico', cursive;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #000;
+	height: 190px;
+    color: #fff;
 }
 
-/* Style rule for body */
-body {
-	background-color: #dfe7c4;
+img{
+    border: 2px solid #000;
+    border-radius: 3px;
+    
+    max-width: 100%;
+    display: block;
+    
 }
 
-/* Style rule for header */
-header {
-	font-family: Verdana, Arial, sans-serif;
-	margin-top: 0.2em;
-	background-color: #628c45;
-	color: #dfe7c4;
-	padding: 2%;
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+}
+
+nav
+{
+  
+    color: #000;
+    padding: 1%;
+    margin-bottom: 1%;
+    list-style-type: none;
+}
+nav ul{
+    list-style-type: none;
     text-align: center;
 }
-
-/* Style rules for main content  */
-main {
-	background-color: #fff;
+nav li{
+    font-size: 1.5em;
+    border-top: 1px solid #fff;
+    text-align: center;
+}
+/*#text
+{
+    font-family: "Brush Script MT";
+    
 }
 
-aside {
-    padding: 2%;
+a{
+    text-decoration: none;
+    color:black;
+    font-weight: bold;
 }
+*/
+.mobile{
+    display: block;
 
-footer {
-	font-size: .70em;
-	text-align: center;
 }
+.lists{
+    font-family: 'Pacifico', cursive;
 
-.column{
-	float: left;
-	width: 33.33%;
-	
 }
-.row:after {
-	content: "";
-	display: table;
-	clear: both;
-}
+/*tablet media query start*/
+@media screen and (min-width: 630px), print{
+    /*.tablet-desktop{
+        display: block;
+    }
+    .mobile{
+        display: none;
+    }*/
+}/*end of tablet media query*/
+
+/*desktop media query start*/
+
+@media screen and (min-width: 760px) {
+    /*style rules for nav*/
+    nav ul a:hover{
+        color: #000;
+        background-color: #fff;
+    }
+    
+}/*end of desktop media querry*/
+
