--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,35 @@ Noah Robinson
 10-11-2023
 styles.css
 */
-body, header, nav, main, footer, h1, div, img, a,ul
+body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, article, grid-container
 {
 	margin: 0;
 	padding: 0;
 	border: 0;
 
+
+}
+.grid-container {
+    display: grid;
+    gap: 50px;
+    column-gap: 50px;
+    row-gap: 50px;
+  }
+.grid{
+    display: grid;
+    grid-template-columns:auto auto auto auto;
+
+
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+figcaption{
+    text-align: center;
 }
 header{
     font-family: 'Pacifico', cursive;
@@ -18,6 +41,8 @@ header{
     background-color: #000;
 	height: 190px;
     color: #fff;
+    text-shadow: 9px 9px 9px #ccc;
+    text-align: center;
 }
 
 img{
@@ -33,6 +58,10 @@ img{
     margin-left: auto;
     margin-right: auto;
     display:block;
+}
+.right {
+    display: block;
+    margin-left: auto;
 }
 
 nav
@@ -70,6 +99,7 @@ a{
 }
 .lists{
     font-family: 'Pacifico', cursive;
+    text-align: center;
 
 }
 /*tablet media query start*/
@@ -91,5 +121,17 @@ a{
         background-color: #fff;
     }
     
-}/*end of desktop media querry*/
+}
+.other{
+    text-shadow: 5px 5px 8px #000;
+}
+/*end of desktop media querry*/
 
+/* start of tablet media querry*/
+@media screen and (min-width: 760px) and (max-width: 1023px) {
+
+    nav ul a:hover{
+        color: #000;
+        background-color: #fff;
+    }
+}
