--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -1,8 +1,8 @@
-*
+/*
 Author: noah robinson
 Date: september 21, 2023*/
 
-body, header, nav, main, footer, h1, div, img, ul, figure, figcaption, section, article, aside {
+body, header, nav, main, footer, h1, div, img, ul, figure, figcaption, section, article, aside, table, th, td {
     margin: 0;
     padding: 0;
     border: 0;
@@ -16,6 +16,9 @@ body {
 img {
     max-width: 100%;
     display: block;
+}
+table, th, td {
+    border: 1px solid;
 }
 
 /* Style rule for box sizing applies to all elements */
