--- a/fitness/css/styles.css
+++ b/fitness/css/styles.css
@@ -2,7 +2,7 @@
 Author: noah robinson
 Date: september 21, 2023*/
 
-body, header, nav, main, footer, h1, div, img, ul, figure, figcaption, section, article, aside, table, th, td {
+body, header, nav, main, footer, h1, h2, div, img, ul, figure, figcaption, section, article, aside, table, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -13,12 +13,47 @@ body {
 	background-color: #000;
 }
 
-img {
+img, video {
     max-width: 100%;
     display: block;
 }
-table, th, td {
-    border: 1px solid;
+/*Style rules for the skip navigation link*/
+.skip{
+    position: absolute;
+    left: -999px;
+}
+.skip:focus{
+    color:#000;
+    background-color: #fff;
+    text-decoration: none;
+    padding: 0.5%;
+    top: auto;
+    left: auto;
+    right: 1px;
+    z-index: 1;
+}
+table {
+    border: 1px solid #000;
+    border-collapse: collapse;
+    margin: 0 auto;
+    width: 100%;
+}
+caption{
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 1%;
+}
+th, td{
+    border: 1px solid #000;
+    padding: 2%;
+}
+th{
+    background-color: #000;
+    color: #fff;
+    font-size: 1.15em;
+}
+tr:nth-child(odd){
+    background-color: #ccc;
 }
 
 /* Style rule for box sizing applies to all elements */
@@ -38,26 +73,21 @@ header {
 header img {
     margin: 0 auto;
 }
-
-/* Style rules for navigation area */
-nav {
-	padding: 1%;
-    margin-bottom: 1%;
-}
-
-nav ul {
-    list-style-type: none;
+/*Style rules for hamburger menu*/
+.mobile-nav a {
+    color: #fff;
+    font-family: 'Francis One', sans-serif;
     text-align: center;
+    font-size: 2em;
+    text-decoration: none;
+    padding: 3%;
+    display: block;
 }
-
-nav li {
-    font-size: 1.5em;
-    font-family: 'Francois One', sans-serif;
-    border-top: 1px solid #fff;
-}
-
-nav li:first-child {
-    border-top: none;
+.mobile-nav a.menu-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 nav li a {
@@ -72,7 +102,7 @@ nav li a {
     display: block;
 }
 
-.tablet-desktop {
+.tablet-desktop, #menu-links {
     display: none;
 }
 
@@ -158,6 +188,7 @@ article:nth-of-type(2) {
     margin: 0 2%;
 }
 
+
 .round {
     border-radius: 8px;
 }
@@ -184,11 +215,13 @@ article:nth-of-type(2) {
 }
 
 /* Style rules for footer content */
-footer p {
+footer .copyright {
     font-size: 0.75em;
     text-align: center;
     color: #fff;
-    padding: 0 1em;
+    padding: 2% 4%;
+    float: left;
+    width: 75%;
 }
 
 footer p a {
@@ -196,15 +229,31 @@ footer p a {
     text-decoration: none;
 }
 
+.social{
+    float: right;
+    width: 20%;
+    padding: 2%;
+}
+social img{
+    display: inline-block;
+    padding: 5%;
+}
+video{
+    margin: 0 auto 4%;
+}
+
 /* Media Query for Tablet Viewport */
 @media screen and (min-width: 630px), print {
+    video{
+        margin: 0 auto 4%;
+    }
     
     /* Tablet Viewport: Show tablet-desktop class, hide mobile class */
     .tablet-desktop {
         display: block;
     }
 
-    .mobile {
+    .mobile, .mobile-nav {
         display: none;
     }
     
@@ -214,18 +263,37 @@ footer p a {
     }
     
     /* Tablet Viewport: Style rules for nav area */
-    nav li {
-        border-top: none;
-        display: inline-block;
-        border-right: 1px solid #fff;
+    nav {
+        padding: 1%;
+        margin-bottom: 1%;
     }
+    
+    nav ul {
+        list-style-type: none;
+        text-align: center;
+    }
+    nav li {
+        font-size: 1.5em;
+        font-family: 'Francois One', sans-serif;
+        border-top: 1px solid #fff;
+    }
+    nav li {
+        font-size: 1.5em;
+        font-family: 'Francois One', sans-serif;
+        display: inline-block;
+        border-top: 1px solid #fff;
+    }
+
     
     nav li:last-child {
         border-right: none;
     }
     
     nav li a {
+        display: block;
+        color: #fff;
         padding: 0.1em 0.75em;
+        text-decoration: none;
     }
     
     /* Tablet Viewport: Style rules for main content area */
@@ -275,7 +343,15 @@ footer p a {
     #exercises dd {
         padding: 0.5% 1% 2% 0;
     } 
-    
+
+    .viewex{
+        font-weight: bold;
+        cursor: pointer;
+
+    }
+    #example{
+        display: none;
+    }
     .tel-num {
         font-size: 1.25em;
     }
@@ -284,7 +360,25 @@ footer p a {
         width: 600px;
         height: 450px;
     }
-    
+    /*Tablet Viewport: Animation */
+    @-webkit-keyframes text-animation {
+        0% { font-size: 1em; }
+        50% { font-size: 2em }
+        100% { font-size: 1.35em; }
+    }
+    @keyframes text-animation {
+        0% { font-size: 1em; }
+        50% { font-size: 2em; }
+        100% { font-size: 1.35em; }
+    }
+    figcaption {
+        -webkit-animation-name: text-animation;
+        animation-name: text-animation;
+        -webkit-animation-delay: 3s;
+        animation-delay: 3s;
+        -webkit-animation-duration: 5s;
+        animation-duration: 5s;
+    }
 }
 
 /* Media Query for Desktop Viewport */
@@ -319,6 +413,7 @@ footer p a {
     nav li a:hover {
         color: #000;
         background-color: #fff;
+        transform: scale(1.3);
     }
     
     /* Desktop Viewport: Style Rules for main content */
@@ -346,6 +441,7 @@ footer p a {
     .frame:hover {
         opacity: 1;
         box-shadow: 8px 8px 10px #808080; 
+        transform: translateY(10px);
     }
     
     #weights, #cardio, #training {
@@ -358,6 +454,11 @@ footer p a {
         clear: left;
     }
     
+    .offer:hover {
+        transform: scale(1.25);
+        cursor: pointer;
+    }
+    
 }
 
 /* Media Query for Large Desktop Viewports */
@@ -368,6 +469,9 @@ footer p a {
         margin: 0 auto;
     }
     
+    table{
+        width: 80%;
+    }
 }
 
 /* Media Query for Print */
@@ -379,6 +483,7 @@ footer p a {
     }
     
 }
+/* Tablet Viewport: Animation
 
 
 	
