--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ Noah Robinson
 10-11-2023
 styles.css
 */
-body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, article, grid-container
+body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, article, grid-container, table, th, td, form
 {
 	margin: 0;
 	padding: 0;
@@ -11,6 +11,12 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
 
 
 }
+table, th, td{
+    border: 0.1em solid #000;
+    text-align: center;
+
+}
+
 .grid-container {
     display: grid;
     gap: 50px;
@@ -19,7 +25,7 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
   }
 .grid{
     display: grid;
-    grid-template-columns:auto auto auto auto;
+    grid-template-columns:auto auto auto auto auto auto;
 
 
 }
@@ -32,6 +38,23 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
   }
 figcaption{
     text-align: center;
+}
+.pic-text {
+    position: absolute;
+    bottom: 0; 
+    background: rgba(0, 0, 0, 0.5); 
+    color: #fff;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+.frame {
+    position: relative;
+    max-width: 450px; 
+    margin: 2% auto;
 }
 header{
     font-family: 'Pacifico', cursive;
@@ -57,15 +80,30 @@ img{
 .center {
     margin-left: auto;
     margin-right: auto;
-    display:block;
+    display: block;
 }
 .right {
     display: block;
     margin-left: auto;
 }
+/*alleged hamburger css*/
+.mobile-nav a {
+    color: #fff;
+    font-family: 'Francis One', sans-serif;
+    text-align: center;
+    font-size: 2em;
+    text-decoration: none;
+    padding: 3%;
+    display: block;
+}
+.mobile-nav a.menu-icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
 
-nav
-{
+nav{
   
     color: #000;
     padding: 1%;
@@ -81,6 +119,28 @@ nav li{
     border-top: 1px solid #fff;
     text-align: center;
 }
+nav li a {
+    display: block;
+    color: #fff;
+    padding: 0.5em 1em;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    color: #fff;
+    background-color: #000;
+    transform: scale(1.3);
+}
+/*form styling start*/
+form{
+    width: 50%;
+    margin: 0 auto;
+
+}
+h2{
+    text-align: center;
+}
+
 /*#text
 {
     font-family: "Brush Script MT";
@@ -93,45 +153,80 @@ a{
     font-weight: bold;
 }
 */
-.mobile{
-    display: block;
 
-}
 .lists{
     font-family: 'Pacifico', cursive;
     text-align: center;
 
 }
-/*tablet media query start*/
-@media screen and (min-width: 630px), print{
-    /*.tablet-desktop{
+.mobile {
+    display: block;
+}
+
+.tablet-desktop, #menu-links {
+    display: none;
+}/*mobile media query start*/
+@media screen and (max-width: 630px), print{
+    .tablet-desktop{
         display: block;
     }
-    .mobile{
+    .mobile, .mobile-nav {
         display: none;
-    }*/
-}/*end of tablet media query*/
+    }
+
+
+    /*start of table styling for mobile viewport*/
+    table, th, td{
+        border: 0.1em solid #000;
+        text-align: center;
+    
+    }
+    form{
+        width: 50%;
+        margin: 0 auto;
+    
+    }
+
+}
+/*end of mobile media query*/
+
 
 /*desktop media query start*/
-
 @media screen and (min-width: 760px) {
     /*style rules for nav*/
     nav ul a:hover{
         color: #000;
         background-color: #fff;
     }
+    form{
+        width: 50%;
+        margin: 0 auto;
+    
+    }
     
 }
 .other{
     text-shadow: 5px 5px 8px #000;
 }
+
 /*end of desktop media querry*/
 
 /* start of tablet media querry*/
 @media screen and (min-width: 760px) and (max-width: 1023px) {
 
+    table, th, td{
+        border: 0.1em solid #000;
+        text-align: center;
+    
+    }
+
     nav ul a:hover{
         color: #000;
         background-color: #fff;
+    }
+    form{
+        width: 50%;
+        margin: 0 auto;
+    
     }
 }
