--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,33 @@ a{
     text-align: center;
 
 }
+.hamburger {
+	position: relative
+	display: block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+
+	appearance: none;
+	background: none;
+	outline: none;
+	border: none;
+}
+
+.hamburger .bar, .hamburger:after, .hamburger:before {
+	content: ' ';
+	display: block;
+	width: 100%;
+	height: 5px;
+	background-color: #fff;
+	margin: 6tpx 0px;
+	transition: 0.4s;
+}
+
+.hamburger.is-active, .hamburger:after {
+	transform: rotate(-45deg) translate(-9px, 6px);
+}
+
 /*mobile media query start*/
 @media screen and (max-width: 630px), print{
     /*.tablet-desktop{
