--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
 
 
 }
+.color{
+    color: #ccc;
+
+}
 body {
     background-color: #000;
   }
@@ -117,11 +121,7 @@ img{
     text-decoration: none;
 
 }
-/*nav{
-    
-    margin: 5em 3em 0 0;
-    width: 70%;
-}*/
+
 nav{
 
     color: #000;
@@ -141,7 +141,7 @@ nav li{
 nav li a {
     padding: 0.5em 1em;
 }
-
+/*Transform function*/
 nav li a:hover {
     color: #fff;
     background-color: #000;
@@ -151,6 +151,8 @@ nav li a:hover {
     overflow: hidden;
     background-color: #333;
     position: relative;
+    font-family: 'Pacifico', cursive;
+    position: -webkit-sticky;
 
 }
 .mobilenav #menu-links{
@@ -169,7 +171,11 @@ nav li a:hover {
     color: black;
     
 }
-
+.audio-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 .mobile{
@@ -217,18 +223,7 @@ h2{
     text-align: center;
 }
 
-/*#text
-{
-    font-family: "Brush Script MT";
-    
-}
 
-a{
-    text-decoration: none;
-    color:black;
-    font-weight: bold;
-}
-*/
 
 .lists{
     font-family: 'Pacifico', cursive;
@@ -236,6 +231,17 @@ a{
 
 }
 
+.center{
+
+}
+h3{
+    text-align: center;
+}
+.video-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /*mobile media query start*/
 @media screen and (max-width: 630px), print{
@@ -343,3 +349,4 @@ a{
     
     }
 }
+
