--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body, header, nav, main, footer, h1, div, img, a, ul, figure, figcaption, articl
 main{
 	text-align: center;
 }
+footer{
+	text-align: center;
+}
 .color{
     color: #ccc;
 
